--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
         </div>
     </div>
     <hr style="margin-top: 15px; margin-bottom: 15px;">
-    <div>
-
+    <div class="Skills">
+        <div>
+            <img src="" alt="coding">
+        </div>
     </div>
 </body>
 </html>
