--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <table width=750px>
                 <tr>
                     <td><img src="imgs/dw profile pic.png" width="250px" alt=""></td>
-                    <td><p>I am <span style="color:red; font-style: italic; font-family: Catamaran;">Divesh Watwani</span>, from Mumbai,India. <br><br>I like to Learn about New Phones, Laptops, Games, etc and Innovative Gadgets and new Technology.As we all know Technology and Innovation is the FUTURE.</p></td>
+                    <td><p>I am <span style="color:orange; font-style: italic; font-family: Catamaran;">Divesh Watwani</span>, from Mumbai,India. <br><br>I like to Learn about New Phones, Laptops, Games, etc and Innovative Gadgets and new Technology.As we all know Technology and Innovation is the FUTURE.</p></td>
                 </tr>
             </table>
             <hr style="margin-bottom:25px;margin-top: 25px;">
