--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div class="intro-section">
         
-        <h1 class="name" style="margin-bottom:0px;margin-left: 15px;font-family: Dancing Script;font-size: 50px;">Hey this is Divesh Watwani..!</h1>
+        <h1 class="name" style="margin-bottom:0px;margin-left: 15px;font-family: Dancing Script;font-size: 50px;">Hey this is Divesh W..!</h1>
         <p class="name" style="margin-top: 10px;margin-left: 15px;font-family: Varela Round;font-size: 25px;">your online brand promoter</p>
         <img src="https://media.giphy.com/media/UVG0BN8TOMKkPOJS6e/giphy.gif" class="code_gif" alt="circuit">
         <img src="https://media.giphy.com/media/IauL6LvGNlT3ffhcqq/giphy.gif" class="computer_gif" alt="webBroswer">
