--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <table width=750px>
                 <tr>
                     <td><img src="imgs/dw profile pic.png" width="250px" alt=""></td>
-                    <td><p>I am <span style="color:orange; font-style: italic; font-family: Catamaran;">Divesh Watwani</span>, from Mumbai,India. <br><br>I like to Learn about New Phones, Laptops, Games, etc and Innovative Gadgets and new Technology.As we all know Technology and Innovation is the FUTURE.</p></td>
+                    <td><p>I am <span style="color:red; font-style: italic; font-family: Catamaran;"> <b> Divesh Watwani </b> </span>, from Mumbai,India. <br><br>I like to Learn about New Phones, Laptops, Games, etc and Innovative Gadgets and new Technology.As we all know Technology and Innovation is the FUTURE.</p></td>
                 </tr>
             </table>
             <hr style="margin-bottom:25px;margin-top: 25px;">
@@ -55,9 +55,12 @@
         </div>
     </div>
     <hr style="margin-top: 15px; margin-bottom: 15px;">
-    <div class="Skills">
+    <div class="Skills-section">
+        <div class="skils-name">
+            <h2 style="margin-bottom: 10px;">Skills</h2>       
+        </div>
         <div>
-            <img src="" alt="coding">
+            
         </div>
     </div>
 </body>
