--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -4,31 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D.W</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="icon" href="favcon/favicon.ico">
 </head>
 <body>
-    
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <div class="container">
-            <a class="navbar-brand fs-5" href="">D.W</a>
-            <ul class="navbar-nav ml-auto fs-5">
-                <li class="nav-item">
-                    <a class="nav-link " href="">About me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link " href="">Contact me</a>
-                </li>
-            </ul>
-        </div>
-        </nav>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>    
+        <a class="navbar-brand fs-5" href="">D.W</a>
+            <div class="collapse navbar-collapse" id="navbar">
+                <ul class="navbar-nav ml-auto fs-5">
+                    <li class="nav-item">
+                            <a class="nav-link " href="">About me</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link " href="">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+    </nav>  
         <center>
             <h1 class="mt-5">Hello this is Divesh Watwani..!</h1>
             <p>your online brand promoter</p>   
         </center>
-    
 </body>
 </html>
