--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             </table>
         </div>
     </div>
+    <center><a style="background-color: red; color: antiquewhite; padding: 2px; margin: 2px; font-size: 1.5rem; text-align: center;" href="index_bootstrap.html">Bootstrap</button></center>
     <hr style="margin-top: 15px; margin-bottom: 15px;">
     <div class="Skills-section">
         <div class="skils-name">
-            <h2 style="margin-bottom: 10px;">Skills</h2>       
+            <h2 style="margin-bottom: 10px;">Skills</h2>   
+                
         </div>
         <div>
             
