--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -81,24 +81,26 @@
     </section>
     <!-- ########################## Qualities__SECTION ################################ -->
     <section id="Qualities-Section">
-        <div class="container-fluid">
+        <div class="container-fluid mt-5">
             <div class="row">
                 <!-- <div class="col">
                     <h4>Computer Skills</h4>
                     <p>As a Computer Engineer,I know Coding Launges like Java , C, Android,etc. I know the basics of Computer.</p>
                 </div> -->
                 <div class="col-lg-4 Qualities_Design">
-                    <p class="fas fa-laptop fa-4x"></p>
+                    <p class="fas fa-laptop fa-4x p_icon"></p>
                     <h4>Computer Skills</h4>
-                    <p class="">As a Computer Engineer,I know Coding Launges like Java , C, Android,etc. I know the basics of Computer.</p>
+                    <p class="p_text">As a Computer Engineer,I know Coding Launges like Java , C, Android,etc. I know the basics of Computer.</p>
                 </div>
                 <div class="col-lg-4 Qualities_Design">
+                    <p class="fab fa-stack-overflow fa-4x p_icon"></p>
                     <h4>Multitasker</h4>
-                    <p>As a Computer engineer, I will be required to manage multiple projects ,so I know to Multitask. </p>
+                    <p class="p_text">As a Computer engineer, I will be required to manage multiple projects ,so I know to Multitask. </p>
                 </div>
                 <div class="col-lg-4 Qualities_Design">
+                    <p class="fas fa-chart-line fa-4x p_icon"></p>
                     <h4>Ability to Learn and Grow</h4>
-                    <p>As we all know this Industry is on updates each and everyday, Similarylly I like to keep My self Updated.</p>
+                    <p class="p_text">As we all know this Industry is on updates each and everyday, Similarylly I like to keep My self Updated.</p>
                 </div>
             </div>
         </div>
