--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -89,17 +89,17 @@
                 </div> -->
                 <div class="col-lg-4 Qualities_Design">
                     <p class="fas fa-laptop fa-4x p_icon"></p>
-                    <h4>Computer Skills</h4>
+                    <h4 class="font-weight-bold quality-design">Computer Skills</h4>
                     <p class="p_text">As a Computer Engineer,I know Coding Launges like Java , C, Android,etc. I know the basics of Computer.</p>
                 </div>
                 <div class="col-lg-4 Qualities_Design">
                     <p class="fab fa-stack-overflow fa-4x p_icon"></p>
-                    <h4>Multitasker</h4>
+                    <h4 class="font-weight-bold quality-design">Multitasker</h4>
                     <p class="p_text">As a Computer engineer, I will be required to manage multiple projects ,so I know to Multitask. </p>
                 </div>
                 <div class="col-lg-4 Qualities_Design">
                     <p class="fas fa-chart-line fa-4x p_icon"></p>
-                    <h4>Ability to Learn and Grow</h4>
+                    <h4 class="font-weight-bold quality-design">Ability to Learn and Grow</h4>
                     <p class="p_text">As we all know this Industry is on updates each and everyday, Similarylly I like to keep My self Updated.</p>
                 </div>
             </div>
