--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -47,10 +47,10 @@
             <div class="collapse navbar-collapse  " id="navbarToggleDemo02">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                            <a class="nav-link " href="#">About me</a>
+                            <a class="nav-link " href="#Qualities-Section">About me</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#">Skills</a>
+                            <a class="nav-link" href="#Testimonials">Skills</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link " href="#">Contact me</a>
@@ -108,7 +108,7 @@
     <!-- ############################-Testimonials-################################ -->
     <section id="Testimonials">
         <div class="container-fluid div-design-testimonial">
-            <div id="Testimonials" class="carousel slide" data-ride="carousel">
+            <div id="Slider-Testimonial" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                   <!-- ############-FirstSlide-####### -->
                   <div class="carousel-item active">
@@ -141,11 +141,11 @@
                   </div>
                 </div>
             
-                <a class="carousel-control-prev" href="#Testimonials" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#Slider-Testimonial" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#Testimonials" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#Slider-Testimonial" role="button" data-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
