--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -50,10 +50,10 @@
                             <a class="nav-link " href="#study-section">About me</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link" href="#Testimonials">Work</a>
+                            <a class="nav-link" href="#Skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Testimonials">Skills</a>
+                        <a class="nav-link" href="#Testimonials">Work</a>
                     </li>
                     <li class="nav-item">
                             <a class="nav-link " href="#">Contact</a>
@@ -144,7 +144,7 @@
 
            <section id="Skills">
             <div class="container-fluid">
-                <h3>Skills..</h3>
+                <h3 style="text-align: center;">SKILLS</h3>
                 <div class="card">
                     <table class="table table-borderless">
                         <tbody>
