--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -353,16 +353,21 @@
     <div class="container-fluid contact-div">
         <div>
             <h3> Make a cool and trendy website of your Bussniess today and make your Bussniess Digital. </h3>
-            <p>to get in touch with me</p>
+            <p>get in touch with me</p>
             <div style="text-align: center;" class="design" >
-                <a href="" class="fab fa-linkedin fa-2x icons-social"></a>
-                <a class="fab fa-facebook-square fa-2x icons-social"></a>
-                <a class="fab fa-instagram fa-2x icons-social"></a>
-                <a class="fas fa-envelope fa-2x icons-social"></a>
-                <p>© Copyright 2021 D.W</p>
+                <i href="https://www.linkedin.com/in/divesh-watwani-5661591b5/" class="fab fa-linkedin fa-2x icons-social"></i>
+                <i href="https://www.facebook.com/divesh.watwani" class="fab fa-facebook-square fa-2x icons-social"></i>
+                <i href="https://www.instagram.com/divesh.watwani/" class="fab fa-instagram fa-2x icons-social"></i>
+                <i href="mailto:diveshwatwani@gmail.com" class="fas fa-envelope fa-2x icons-social"></i>
+                <p class="phone-copyright">© Copyright 2021 D.W</p>
             </div>
             
         </div>
+    </div>
+</section>
+<section id="fotter">
+    <div class="fotter">
+
     </div>
 </section>
 </div>
