--- a/index_bootstrap.html
+++ b/index_bootstrap.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="#Testimonials">Work</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link " href="#">Contact</a>
+                            <a class="nav-link " href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -355,10 +355,10 @@
             <h3> Make a cool and trendy website of your Bussniess today and make your Bussniess Digital. </h3>
             <p>get in touch with me</p>
             <div style="text-align: center;" class="design" >
-                <i href="https://www.linkedin.com/in/divesh-watwani-5661591b5/" class="fab fa-linkedin fa-2x icons-social"></i>
-                <i href="https://www.facebook.com/divesh.watwani" class="fab fa-facebook-square fa-2x icons-social"></i>
-                <i href="https://www.instagram.com/divesh.watwani/" class="fab fa-instagram fa-2x icons-social"></i>
-                <i href="mailto:diveshwatwani@gmail.com" class="fas fa-envelope fa-2x icons-social"></i>
+                <a href="https://www.linkedin.com/in/divesh-watwani-5661591b5/"><i  class="fab fa-linkedin fa-2x icons-social"></i></a>
+                <a href="https://www.facebook.com/divesh.watwani"> <i class="fab fa-facebook-square fa-2x icons-social"></i></a>
+                <a href="https://www.instagram.com/divesh.watwani/"><i class="fab fa-instagram fa-2x icons-social"></i></a>
+                <a href="mailto:diveshwatwani@gmail.com"><i class="fas fa-envelope fa-2x icons-social"></i></a>
                 <p class="phone-copyright">© Copyright 2021 D.W</p>
             </div>
             
