--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                             <!-- <p>This is fully free package u dont need to pay for it anthong..!</p> -->
                             <ul>
                                 <li><b><span style="color: black;" > 2007 - 2015</span></b> : STD 1 to 8 at Holy Family Convent High School, Ulhasnagar-4, India.</li>
-                                <li><b><span style="color: black;" > 2015 - 2017</span></b> : STD 8 to 10 at Swami Shanti Prakash High School,Ulhasnagar-5,India.</li><br>
+                                <li><b><span style="color: black;" > 2015 - 2017</span></b> : STD 9 to 10 at Swami Shanti Prakash High School,Ulhasnagar-5,India.</li><br>
                             </ul>
                         </div>
                     </div>
@@ -276,17 +276,17 @@
                     <div class="col-lg-4 Qualities_Design">
                         <p class="fas fa-laptop fa-4x p_icon"></p>
                         <h4 class="font-weight-bold quality-design">Computer Skills</h4>
-                        <p class="p_text">As a Computer Engineer,I know Coding Launges like Java , C, Android,etc. I know the basics of Computer.</p>
+                        <p class="p_text">As a Computer Engineer,I know Coding Launges like Java , C, Android,etc. I know the Computer very well.</p>
                     </div>
                     <div class="col-lg-4 Qualities_Design">
                         <p class="fab fa-stack-overflow fa-4x p_icon"></p>
                         <h4 class="font-weight-bold quality-design">Multitasker</h4>
-                        <p class="p_text">As a Computer engineer, I will be required to manage multiple projects ,so I know to Multitask. </p>
+                        <p class="p_text">As a Computer engineer, I will be required to manage multiple projects ,so I know how to Multitask. </p>
                     </div>
                     <div class="col-lg-4 Qualities_Design">
                         <p class="fas fa-chart-line fa-4x p_icon"></p>
-                        <h4 class="font-weight-bold quality-design">Ability to Learn and Grow</h4>
-                        <p class="p_text">As we all know this Industry is on updates each and everyday, Similarylly I like to keep My self Updated.</p>
+                        <h4 class="font-weight-bold quality-design">Learn and Grow</h4>
+                        <p class="p_text">As we all know this Tech Industry is all about the updates, similarly I keep Myself Updated.</p>
                     </div>
                 </div>
             </div>
