--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="mt-5">
         <div class="row">
             <div class="col-lg-6 col-md-12">
-                <h1 class="mt-5">Hello this is Divesh Watwani..!</h1>
+                <h1 class="mt-5">Hello this is Divesh W..!</h1>
                 <p>your online brand promoter</p>
                     
                     <!-- BUttons     -->
