--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <h1 class="mt-5">Hello this is Divesh W..!</h1>
-                <p>Software Developer</p>
+                <p>Web Developer || UI/UX || Android Developer</p>
                     
                     <!-- BUttons     -->
                     
-                    <button type="button" onclick="location.href ='mailto:diveshwatwani@gmail.com'" class="btn btn-dark btn-lg bt-design"><i class="fas fa-rupee-sign"></i>  Hire me</button>
+                    <button type="button" onclick="location.href ='mailto:diveshwatwani@gmail.com'" class="btn btn-dark btn-lg bt-design"><i class="fa-solid fa-envelope"></i>  Mail me</button>
                     <button type="button" onclick="location.href ='https://drive.google.com/file/d/1IVtb2k1BbMDZhRY26Adg3ANindW4FnPF/view?usp=sharing'" class="btn btn-outline-light btn-lg bt-design"> <i class="fas fa-scroll"></i> Resume</button>
 
                     <!-- /BUttons -->
