--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     
                     <!-- BUttons     -->
                     
-                    <button type="button" onclick="location.href ='mailto:diveshwatwani@gmail.com'" class="btn btn-dark btn-lg bt-design"><i class="fa-solid fa-envelope"></i>  Mail me</button>
+                    <button type="button" onclick="location.href ='mailto:diveshwatwani@gmail.com'" class="btn btn-dark btn-lg bt-design"><i class="fas fa-envelope"></i>  Mail me</button>
                     <button type="button" onclick="location.href ='https://drive.google.com/file/d/1IVtb2k1BbMDZhRY26Adg3ANindW4FnPF/view?usp=sharing'" class="btn btn-outline-light btn-lg bt-design"> <i class="fas fa-scroll"></i> Resume</button>
 
                     <!-- /BUttons -->
